moved content of main.js to index.js - added mfp plugin and updated config.xml

--- a/www/index.html
+++ b/www/index.html
@@ -26,15 +26,16 @@ limitations under the License.
         <title>Resource Requesting</title>
     </head>
     <body>
-        <<div id="header">
-			<h1>RSS Reader</h1>
-		</div>
-		
+        <div id="header">
+			       <h1>RSS Reader</h1>
+		    </div>
+
         <div id="wrapper">
-			<ul id="itemsList"></ul>
-		</div>
-        
+            <ul id="itemsList"></ul>
+        </div>
+
         <script type="text/javascript" src="cordova.js"></script>
+        <script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
         <script type="text/javascript" src="js/main.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
     </body>
