add a spin with cordova-plugin-spinnerdialog to replace WL.BusyIndicator

--- a/www/index.html
+++ b/www/index.html
@@ -30,10 +30,10 @@
     <div id="form">
         First Name<br />
         <input type="text" id="first" value="John"></input><br />
-        Second Name<br />
-        <input type="text" id="second" value="M"></input><br />
-        Third Name<br />
-        <input type="text" id="third" value="Smith"></input><br />
+        Middle Name<br />
+        <input type="text" id="middle" value="M"></input><br />
+        Last Name<br />
+        <input type="text" id="last" value="Smith"></input><br />
         Age<br />
         <input type="text" id="age" value="42"></input><br />
         Date<br />
@@ -43,6 +43,7 @@
         <input type="button" id="btn_submit" value="Submit"></input><br />
     </div>
     <div id="result">
+        <span id="span_result"></span>
     </div>
   </body>
 </html>
