--- a/www/index.html
+++ b/www/index.html
@@ -37,16 +37,16 @@
     	<div role="main" class="ui-content">
         <form id="form">
             <div class="ui-field-contain">
-              <label for="first">First Name:</label>
-              <input data-mini="true" type="text" id="first" value="John"></input>
+                <label for="first" >First Name:</label>
+                <input type="text" id="first" value="John"></input>
             </div>
             <div class="ui-field-contain">
-              <label for="middle">Middle Name:</label>
+              <label data-mini="true" for="middle">Middle Name:</label>
               <input data-mini="true" type="text" id="middle" value="M"></input>
             </div>
             <div class="ui-field-contain">
               <label for="last">Last Name:</label>
-              <input data-mini="true" type="text" id="last" value="Smith"></input>
+              <input d type="text" id="last" value="Smith"></input>
             </div>
             <div class="ui-field-contain">
               <label for="age">Age:</label>
@@ -62,13 +62,7 @@
             </div>
             <input type="button" id="btn_submit" value="Submit"></input>
         </form>
-        <div id="result">
-            <span id="span_result">Result will be presented here</span>
-        </div>
       </div>
     </div>
-
-
-
   </body>
 </html>
