remove jquery mobile and update css to match look and feel of other samples

--- a/www/index.html
+++ b/www/index.html
@@ -19,50 +19,46 @@
 	<!-- Uncomment the following line if you are migrating an app from Legacy to MFP Cordova -->
     <!--  <link rel="stylesheet" type="text/css" href="plugins/cordova-plugin-mfp/worklight/worklight.css" > -->
     <link rel="stylesheet" type="text/css" href="css/index.css" />
-    <link rel="stylesheet" type="text/css" href="css/jquery.mobile-1.4.5.min.css" />
-
-    <script type="text/javascript" src="js/jquery-1.12.0.min.js"></script>
-    <script type="text/javascript" src="js/jquery.mobile-1.4.5.min.js"></script>
+  	<link rel="stylesheet" type="text/css" href="css/main.css">
 
     <!-- load script with wlCommonInit defined before loading cordova.js -->
     <script type="text/javascript" src="js/index.js"></script>
     <script type="text/javascript" src="cordova.js"></script>
 
-
-
     <title>ResourceRequestCordova</title>
   </head>
   <body>
-    <div data-role="page">
-    	<div role="main" class="ui-content">
-        <form id="form">
-            <div class="ui-field-contain">
-                <label for="first" >First Name:</label>
-                <input type="text" id="first" value="John"></input>
-            </div>
-            <div class="ui-field-contain">
-              <label data-mini="true" for="middle">Middle Name:</label>
-              <input data-mini="true" type="text" id="middle" value="M"></input>
-            </div>
-            <div class="ui-field-contain">
-              <label for="last">Last Name:</label>
-              <input d type="text" id="last" value="Smith"></input>
-            </div>
-            <div class="ui-field-contain">
-              <label for="age">Age:</label>
-              <input data-mini="true" type="text" id="age" value="42"></input>
-            </div>
-            <div class="ui-field-contain">
-              <label for="date">Date:</label>
-              <input data-mini="true" type="text" id="date" value="1974-05-05"></input>
-            </div>
-            <div class="ui-field-contain">
-              <label for="height">Height:</label>
-              <input data-mini="true" type="text" id="height" value="175"></input>
-            </div>
-            <input type="button" id="btn_submit" value="Submit"></input>
-        </form>
+    <div id="header">
+  	<h1>Resource Request</h1>
+  </div>
+   <div id="wrapper">
+          <form id="form">
+              <div>
+                  <label for="first" >First Name:</label>
+                  <input type="text" id="first" value="John"></input>
+              </div>
+              <div>
+                <label data-mini="true" for="middle">Middle Name:</label>
+                <input data-mini="true" type="text" id="middle" value="M"></input>
+              </div>
+              <div>
+                <label for="last">Last Name:</label>
+                <input d type="text" id="last" value="Smith"></input>
+              </div>
+              <div>
+                <label for="age">Age:</label>
+                <input data-mini="true" type="text" id="age" value="42"></input>
+              </div>
+              <div>
+                <label for="date">Date:</label>
+                <input data-mini="true" type="text" id="date" value="1974-05-05"></input>
+              </div>
+              <div>
+                <label for="height">Height:</label>
+                <input data-mini="true" type="text" id="height" value="175"></input>
+              </div>
+              <input type="button" class="submit" id="btn_submit" value="Submit"></input>
+          </form>
       </div>
-    </div>
   </body>
 </html>
