--- a/www/index.html
+++ b/www/index.html
@@ -25,12 +25,12 @@
         </div>
         <div id="wrapper">
             <form id="form">
-                <input type="text" id="first" placeholder="First name"></input>
-                <input data-mini="true" type="text" id="middle" placeholder="Middle name"></input>
-                <input d type="text" id="last" placeholder="Last name"></input>
-                <input data-mini="true" type="text" id="age" placeholder="Age"></input>
-                <input data-mini="true" type="text" id="height" placeholder="Height"></input>
-                <input data-mini="true" type="text" id="date" placeholder="Date"></input>
+                <input type="text" id="first"   placeholder="First name"></input>
+                <input type="text" id="middle"  placeholder="Middle name"></input>
+                <input type="text" id="last"    placeholder="Last name"></input>
+                <input type="text" id="age"     placeholder="Age"></input>
+                <input type="text" id="height"  placeholder="Height"></input>
+                <input type="text" id="date"    placeholder="Date"></input>
                 <button class="submit" id="btn_submit">Submit</input>
             </form>
         </div>
