remove <form> element that was causing problems

--- a/www/index.html
+++ b/www/index.html
@@ -24,15 +24,14 @@
             <h1>Resource Request</h1>
         </div>
         <div id="wrapper">
-            <form id="form">
                 <input type="text" id="first"   placeholder="First name"></input>
                 <input type="text" id="middle"  placeholder="Middle name"></input>
                 <input type="text" id="last"    placeholder="Last name"></input>
                 <input type="text" id="age"     placeholder="Age"></input>
                 <input type="text" id="height"  placeholder="Height"></input>
                 <input type="text" id="date"    placeholder="Date"></input>
-                <button class="submit" id="btn_submit">Submit</input>
-            </form>
+                <button class="submit" id="btn_submit">Submit</button>
+                <div id="div_result"></div>
         </div>
     </body>
 </html>
