Update sample implementation

--- a/www/index.html
+++ b/www/index.html
@@ -19,13 +19,13 @@
             <h1>Resource Request</h1>
         </div>
         <div id="wrapper">
-            <input type="text" id="first"   placeholder="First name"></input>
-            <input type="text" id="middle"  placeholder="Middle name"></input>
-            <input type="text" id="last"    placeholder="Last name"></input>
-            <input type="text" id="age"     placeholder="Age"></input>
-            <input type="text" id="height"  placeholder="Height"></input>
-            <input type="text" id="date"    placeholder="Date"></input>
-            <button class="submit" id="btn_submit">Submit</button>
+            <input type="text" id="first"     placeholder="First name"></input>
+            <input type="text" id="middle"    placeholder="Middle name"></input>
+            <input type="text" id="last"      placeholder="Last name"></input>
+            <input type="text" id="age"       placeholder="Age"></input>
+            <input type="text" id="height"    placeholder="Height"></input>
+            <input type="text" id="birthdate" placeholder="Birthdate"></input>
+            <button class="submit" id="btn_submit">Submit</button><br/>
             <div id="div_result"></div>
         </div>
     </body>
